Add `-proc:full` to compiler arguments